--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node models/seeds/expenseSeeder.js" // 新增腳本
+    "seed": "node models/seeds/RecordSeeder.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
     "mongoose": "^5.11.9"
   }
 }
